// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinischeduleBlock renders a block 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Block
    </span>
    block
  </div>,
  <div
    className="m-minischedule__run-header"
  >
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleBlock renders a not found state 1`] = `"No block found"`;

exports[`MinischeduleBlock renders pulls and deadheads 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Block
    </span>
    block
  </div>,
  <div
    className="m-minischedule__run-header"
  >
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Start time
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Pull out
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Deadhead
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:03am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Pull back
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:14am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Done
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleBlock renders the loading state 1`] = `"loading..."`;

exports[`MinischeduleBlock renders trips in both directions, or missing direction 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Block
    </span>
    block
  </div>,
  <div
    className="m-minischedule__run-header"
  >
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue The Other Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:05am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue Missing Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:10am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun on a run with multiple layovers, marks the correct one current 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__layover-row"
    >
      <div
        className="m-minischedule__icon"
      />
      <div
        className="m-minischedule__left-text"
      >
        Layover
      </div>
      <div
        className="m-minischedule__right-text"
      >
        5m
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue The Other Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:05am
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__layover-row m-minischedule__row--current on-time"
    >
      <div
        className="m-minischedule__icon"
      />
      <div
        className="m-minischedule__left-text"
      >
        Layover
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4m
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue Trip The Third
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:10am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders a not found state 1`] = `"No run found"`;

exports[`MinischeduleRun renders a run 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__row"
  >
    <div
      className="m-minischedule__icon"
    />
    <div
      className="m-minischedule__left-text"
    >
      Break (Paid meal before)
    </div>
    <div
      className="m-minischedule__right-text"
    >
      30m
    </div>
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__layover-row"
    >
      <div
        className="m-minischedule__icon"
      />
      <div
        className="m-minischedule__left-text"
      >
        Layover
      </div>
      <div
        className="m-minischedule__right-text"
      >
        5m
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue The Other Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:05am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders a run with a current layover between trips 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__layover-row m-minischedule__row--current on-time"
    >
      <div
        className="m-minischedule__icon"
      />
      <div
        className="m-minischedule__left-text"
      >
        Layover
      </div>
      <div
        className="m-minischedule__right-text"
      >
        5m
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue The Other Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:05am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders a run with a layover before an as-directed 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4:20am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__layover-row"
    >
      <div
        className="m-minischedule__icon"
      />
      <div
        className="m-minischedule__left-text"
      >
        Layover
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4h 29m
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Run as directed
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Done
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders a run with a non-current layover between trips 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__layover-row"
    >
      <div
        className="m-minischedule__icon"
      />
      <div
        className="m-minischedule__left-text"
      >
        Layover
      </div>
      <div
        className="m-minischedule__right-text"
      >
        5m
      </div>
    </div>
    <div
      className="m-minischedule__row m-minischedule__row--current on-time"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue The Other Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:05am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders a run with no layovers between trips 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing on
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X Revenue The Other Direction
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders as directed pieces 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Start time
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4:20am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Run as directed
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4:30am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Done
      </div>
      <div
        className="m-minischedule__right-text"
      >
        4:30am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders the loading state 1`] = `"loading..."`;
